@@ -1,61 +1,26 @@
-/*
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
- */
 package AoC.year21;
 
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.util.Scanner;
-import java.util.LinkedList;
-/**
- *
- * @author simon
- */
-public class DayThree {
+import AoC.Day;
+import java.util.ArrayList;
+
+public class DayThree extends Day {
+
+    public String fileLocation = "files/21/03/source.txt";
+    //public String fileLocation = "files/21/03/sample.txt";
     
-    private LinkedList<String> lines = new LinkedList<>();
-    
-    /**
-     * Setup day three.
-     */
-    public DayThree() {
-        try {
-            //File myObj = new File("files/21/03/sample.txt");
-            File myObj = new File("files/21/03/source.txt");
-            Scanner myReader = new Scanner(myObj);
-            while (myReader.hasNextLine()) {
-                String data = myReader.nextLine();
-                lines.add(data);
-            }
-            myReader.close();
-        } catch (FileNotFoundException e) {
-            System.out.println("An error occurred.");
-            e.printStackTrace();
-        }
-    }
-    
-    /**
-     * First part of day three.
-     */
     public void partOne() {
-        // Setup some vars
+        ArrayList<String> lines = getInput(fileLocation);
         int[] ones = new int[lines.get(0).length()];
         String gammaBinaryString = "";
         String epsilonBinaryString = "";
-        // Loop the lines
         for(String line : lines) {
             for(int i = 0 ; i < line.length() ; i++) {
-                // Count 1's per column
                 if(line.charAt(i) == '1') {
                     ones[i]++;
                 }
             }
         }
-        // Convert to most occurence
         for(int i = 0 ; i < ones.length ; i++) {
-            // Decide
             if(ones[i] > lines.size() / 2 ) {
                 gammaBinaryString += "1";
                 epsilonBinaryString += "0";
@@ -66,29 +31,22 @@ public class DayThree {
                 System.out.println("AH OH!!??");
             }
         }
-        // Process results
         int gamma = Integer.parseInt(gammaBinaryString, 2);
         int epsilon = Integer.parseInt(epsilonBinaryString, 2);
-        // Present the awnser.
         System.out.println(
             "2021 Day Three - Part One = Gamma:" + gamma + 
             " * Epsilon:" + epsilon +
             " = " + gamma * epsilon
         );
     }
-    
-    /**
-     * Second part of day three.
-     */
+
     public void partTwo() {
-        // Setup some vars
-        LinkedList<String> generatorList = (LinkedList) lines.clone();
-        LinkedList<String> scrubberList = (LinkedList) lines.clone();
+        ArrayList<String> lines = getInput(fileLocation);
+        ArrayList<String> generatorList = (ArrayList) lines.clone();
+        ArrayList<String> scrubberList = (ArrayList) lines.clone();
         for(int i = 0 ; i < lines.get(0).length() ; i++) {
-            // Setup vars
-            LinkedList<String> zeroes = new LinkedList();
-            LinkedList<String> ones = new LinkedList();
-            // Loop all generatorLines left and split
+            ArrayList<String> zeroes = new ArrayList();
+            ArrayList<String> ones = new ArrayList();
             for(String generatorLine : generatorList) {
                 if(generatorLine.charAt(i) == '0') {
                     zeroes.add(generatorLine);
@@ -96,19 +54,16 @@ public class DayThree {
                     ones.add(generatorLine);
                 }
             }
-            // Decide which list to replace our previous list with
             if(ones.size() >= zeroes.size()) {
                 generatorList = ones;
             } else {
                 generatorList = zeroes;
             }
-            // Check if we have stuff left to check first
             if(scrubberList.size() == 1) {
                 continue;
             }
-            // Scrubber stuff
-            zeroes = new LinkedList();
-            ones = new LinkedList();
+            zeroes = new ArrayList();
+            ones = new ArrayList();
             for(String scrubberLine : scrubberList) {
                 if(scrubberLine.charAt(i) == '0') {
                     zeroes.add(scrubberLine);
@@ -116,16 +71,14 @@ public class DayThree {
                     ones.add(scrubberLine);
                 }
             }
-            // Decide on which list
             if(zeroes.size() > ones.size()) {
                 scrubberList = ones;
             } else {
                 scrubberList = zeroes;
             }
         }
-        // Process results
-        int generator = Integer.parseInt(generatorList.getFirst(), 2);
-        int scrubber = Integer.parseInt(scrubberList.getFirst(), 2);
+        int generator = Integer.parseInt(generatorList.get(0), 2);
+        int scrubber = Integer.parseInt(scrubberList.get(0), 2);
         System.out.println(
             "2021 Day Three - Part Two = Generator:" + generator + 
             " * Scrubber:" + scrubber +
